--- a/Color0.0.csproj
+++ b/Color0.0.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{D4812421-AEE1-AF29-FCDF-F850428B4A15}</ProjectGuid>
+    <ProjectGuid>{5A585DD6-EA63-2DE5-58AB-7917046532A1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AssemblyName>Assembly-CSharp</AssemblyName>
     <FileAlignment>512</FileAlignment>
@@ -82,7 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Script\NameSet.cs" />
-    <Compile Include="Assets\Script\PlayerData.cs" />
+    <Compile Include="Assets\Script\PlayerDataManagement.cs" />
     <Compile Include="Assets\Script\PlayerManagement.cs" />
     <Compile Include="Assets\Script\PlayerMove.cs" />
     <Compile Include="Assets\Script\StartManager.cs" />
